--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,8 @@
     "type": "project",
     "require": {
         "php": "^8.1",
+        "flipbox/lumen-generator": "^9.2",
+        "illuminate/database": "^10.31",
         "laravel/lumen-framework": "^10.0"
     },
     "require-dev": {
